--- a/style-mainPage.css
+++ b/style-mainPage.css
@@ -1,27 +1,31 @@
 body {
+    /* display: flex;  */
+    overflow-x: hidden;
     margin: 0px;
 }
 
 #hero {
     background-image: url("src/hero/background.jpg");
 
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 
     background-size: cover;
+
 }
 
-#logo-headline{
-    width: auto;
-    height: 20vh;
+#logo-headline {
+    width: 100vw;
+    height: auto;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin: 0px;
     /* justify-content: start;
     align-items: flex-end; */
 }
 
-#logo-headline img{
+#logo-headline img {
     /* width: 8vw;
     height: 8vw; */
 
@@ -31,11 +35,11 @@ body {
 
 #upper-hero {
     width: auto;
-    height: 80vh;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
     /* align-items: flex-end; */
 }
 
@@ -46,8 +50,7 @@ body {
     font-style: italic;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 12vw;
-    margin: 0;
-    margin-left: 40px;
+    margin: 0px;
 }
 
 
@@ -69,7 +72,7 @@ body {
     justify-content: space-between;
 }
 
-.middel-line{
+.middel-line {
     width: 100%;
     height: 6vw;
 
@@ -85,89 +88,90 @@ body {
     color: bisque;
 }
 
-.middel-word{
+.middel-word {
     margin: 0px;
     font-size: 4vw;
 }
 
 
-.product-window{
-    width: 40%;
-    height: 100px;
-    /* margin: 30px; */
-    /* margin-top: 2%; */
+.product-window {
+    width: 40vw;
+    height: 10vw;
+
+
     margin-bottom: 2%;
     margin-left: 3%;
     margin-right: 3%;
-    /* margin-top: 30%; */
-    /* margin: 10px; */
+
     background-color: white;
-    border: 2px solid black;
+    border: 0.2vw solid black;
     display: flex;
     justify-content: space-between;
 
+    /* -webkit-text-stroke: 0.05vw green; */
 
 }
 
 
-.product-image{
-    width: 20%;
-    height: auto;
+.product-image {
+    width: 10vw;
+    height: 10vw;
 }
 
-.p-text{
-    width: 80%;
-    height: auto;
+.p-text {
+    width: 19.9vw;
+    height: 10vw;
     margin: 0px;
-    margin-top: 5px;
     display: flex;
     align-items: center;
 
     text-align: center;
 }
 
-.button{
+a {
+    width: 9.9vw;
+    height: 9.6vw;
+}
+
+.button {
     display: flex;
 
-    width: 93%;
-    height: 96%;
+    /* width: 92%;
+    height: 97%; */
 
-    margin: 0;
+    width: 9.9vw;
+    height: 9.6vw;
+
+    margin: 0px;
+
+
+    justify-content: space-around;
     align-items: center;
     text-align: center;
-    padding-right: 2%;
-    padding-left: 2%;
 
-    /* width: auto;
-    height: auto; */
 
-    /* margin-left: 5px; */
-    /* padding: 10px; */
-    
+
     background-color: black;
     color: white;
-    border: 2px solid brown;
 
+    border: 0.2vw solid brown;
 
-    /* margin-top: 5px;  */
-    /* margin-top: auto;
-    margin-right: 5px;
-    margin-left: 5px;
-    margin-bottom: 10px; */
-    /* align-items: flex-end; */
+}
 
+.productPage-links{
+    /* color: white; */
+    color: black;
 }
 
 
 
-#reviews{
+#reviews {
     background-image: url("src/hero/background.jpg");
     background-size: cover;
     width: 100%;
     height: 100%;
-    height:  200px;
-    /* width: auto;
-    height: auto; */
+    height: 200px;
+
 }
 
 
@@ -185,7 +189,11 @@ body {
     justify-content: space-between;
 }
 
-#logo{
+.bottom-links{
+    color: rgb(42, 37, 37);
+}
+
+#logo {
     height: 100%;
     width: auto;
     display: flex;
@@ -193,16 +201,23 @@ body {
     align-items: center;
 }
 
-#logo img{
-    margin-right: 15px;
+#logo img {
+    margin-right: 2vw;
 
     width: 3.5vw;
-    height: 3.5vw;;
+    height: 3.5vw;
+    ;
+}
+
+#logo a {
+    width: 3.5vw;
+    height: 3.5vw;
+    margin-right: 1vw;
 }
 
 
 
-#bottom-text{
+#bottom-text {
     width: auto;
     height: auto;
     display: flex;
@@ -213,7 +228,7 @@ body {
     /* align-items: stretch; */
 }
 
-#bottom-text p{
+#bottom-text p {
     width: 100%;
     height: auto;
 
@@ -223,6 +238,87 @@ body {
     /* margin-top: 3%;
     margin-bottom: 3%;  */
     margin: 0;
+}
+
+@media screen and (max-width: 768px) {
+    #logo-headline {
+        width: 100vw;
+        height: 20vh;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+        margin: 0px;
+        /* justify-content: start;
+        align-items: flex-end; */
+    }
+
+    #main{
+        /* flex-wrap: nowrap; */
+        display: block;
+        /* height: auto; */
+        background-repeat: repeat-y;
+        padding-bottom: 1vw;
+    }
+
+    .product-window {
+        width: 80vw;
+        height: 20vw;
 
 
+        margin-bottom: 4%;
+        margin-left: 6%;
+        margin-right: 6%;
+
+        background-color: white;
+        border: 0.4vw solid black;
+        display: flex;
+        justify-content: space-between;
+        font-size: 2.5vw;
+
+
+    }
+
+
+    .product-image {
+        width: 20vw;
+        height: 20vw;
+    }
+
+    .p-text {
+        width: 39.8vw;
+        height: 20vw;
+        margin: 0px;
+        display: flex;
+        align-items: center;
+
+        text-align: center;
+    }
+
+    a {
+        width: 19.8vw;
+        height: 19.2vw;
+    }
+
+    .button {
+        display: flex;
+
+        width: 19.8vw;
+        height: 19.2vw;
+
+        margin: 0px;
+
+
+        justify-content: space-around;
+        align-items: center;
+        text-align: center;
+
+
+
+        background-color: black;
+        color: white;
+
+        border: 0.4vw solid brown;
+
+    }
 }
