addition of up-jumper-arrow and move-sticky headline (version 7)

--- a/style-mainPage.css
+++ b/style-mainPage.css
@@ -1,29 +1,53 @@
 body {
     /* display: flex;  */
+
     overflow-x: hidden;
     margin: 0px;
 }
 
+ #arrow-link{
+    position: fixed;
+    top: 76%;
+    /* bottom: 20%; */
+    /* right: 93%; */
+    left: 3%;
+
+    margin: 0;
+}
+
+#arrow{
+    width: 4vw;
+    height: 4vw;
+
+    position: fixed;
+    top: 76%;
+    /* bottom: 20%; */
+    /* right: 93%; */
+    left: 3%;
+
+    margin: 0;    
+} 
+
 #hero {
     background-image: url("src/hero/background.jpg");
-
     width: 100vw;
     height: 100vh;
 
     background-size: cover;
+    display: block;
 
+    /* flex-direction: column; */
 }
 
 
-#upper-hero {
+/* #upper-hero {
     width: auto;
     height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
 
-    /* align-items: flex-end; */
-}
+    align-items: flex-end; } */
 
 
 
@@ -34,6 +58,19 @@ body {
     font-size: 12vw;
     margin: 0px;
     text-shadow: 1vw 1vw 0.7vw black;
+    float: inline-start;
+
+    text-align: center;
+    padding-top: 5vw;
+
+    top: 0px;
+    position: sticky;
+
+    height: auto;
+
+    /* -webkit-text-fill-color: ;
+    -webkit-text-stroke-color: black;
+    -webkit-text-stroke: 0.1vw; */
 }
 
 
@@ -44,7 +81,7 @@ body {
     background-image: url("src/hero/background.jpg");
     background-size: cover;
 
-    width: 100%;
+    width: 100vw;
     height: 100%;
 
     font-size: 1.2vw;
@@ -92,9 +129,11 @@ body {
     justify-content: space-between;
     border-radius: 1vw;
 
+
+
 }
 
-.product-window:hover{
+.product-window:hover {
     box-shadow: 1.5vw 1.5vw 1vw black;
 }
 
@@ -150,12 +189,12 @@ a {
 
 }
 
-.product-window:hover .button{
+.product-window:hover .button {
     color: crimson;
 }
 
 
-.productPage-links{
+.productPage-links {
     /* color: white; */
     color: black;
 }
@@ -165,7 +204,7 @@ a {
 #reviews {
     background-image: url("src/hero/background.jpg");
     background-size: cover;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     height: 200px;
 
@@ -173,7 +212,7 @@ a {
 
 
 
-#partner-section{
+#partner-section {
     background-image: url("src/hero/background.jpg");
     background-size: cover;
 
@@ -209,7 +248,7 @@ a {
     width: 20vw;
     height: auto;
 
-    margin-left: 4vw ;
+    margin-left: 4vw;
     /* margin-bottom: 7vw; */
     margin-top: 7vw;
     margin-bottom: 3vw;
@@ -221,16 +260,21 @@ a {
     background-color: rgb(42, 37, 37);
     /* width: auto; */
 
-    width: 100%;
+    width: 100vw;
     height: 8vw;
 
     display: flex;
     justify-content: space-between;
 }
 
-.bottom-links{
+.bottom-links {
     color: rgb(42, 37, 37);
+    margin-left: 1vw;
 }
+
+
+
+
 
 #logo {
     height: 100%;
@@ -241,17 +285,16 @@ a {
 }
 
 #logo img {
-    margin-right: 2vw;
 
     width: 3.5vw;
     height: 3.5vw;
-    ;
+    
 }
 
 #logo a {
     width: 3.5vw;
     height: 3.5vw;
-    margin-right: 1vw;
+    margin-right: 2.5vw;
 }
 
 
@@ -262,7 +305,7 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    margin-left: 2%;
+    margin-left: 2vw;
 
     /* align-items: stretch; */
 }
@@ -294,7 +337,7 @@ a {
         align-items: flex-end; */
     }
 
-    #main{
+    #main {
         /* flex-wrap: nowrap; */
         display: block;
         /* height: auto; */
